--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: normal;
     margin-top: 0px;
     margin-bottom: 0px;
-    color: #1f2632;
+    color: #045df8;
     font-family: 'Barlow Condensed', sans-serif;
 }
 
@@ -61,11 +61,12 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 }
 
 h1, .h1 {
-    font-size: 70px;
+    font-size: 100px;
     font-style: normal;
     line-height: 80px;
     font-weight: 700;
     letter-spacing: 0;
+    color: #045df8;
 }
 
 h2, .h2 {
@@ -203,11 +204,11 @@ section {
 }
 
 .text-hover {
-    color: #1c2431;
+    color: #ffaa00;
 }
 
 .text-black {
-    color: #1f2632;
+    color: #005eff;
 }
 
 .text-grey {
